# csengo

./: .gitignore  Cargo.toml  README.md  build.rs  default.nix  flake.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/: cross.Dockerfile
.github/workflows/: ci.yml
frontend/: bundle.js  main.js  package.json  pnpm-lock.yaml  style.css  tsconfig.json
frontend-old/: index.html  package.json
frontend-old/src/: main.ts
frontend/src/: App.svelte
misc/: csengo-log.service  csengo.service  install.sh  update.sh
src/: db.rs  mail.rs  main.rs  metrics.rs  player.rs  scheduler.rs  server.rs  server_axum.rs  sink.rs  templates.rs
static/: style.css
templates/: datepicker.html  filepicker.html  files.html  form.html  index.html  status.html  tasks.html
