[package]
name = "csengo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
pretty_env_logger = "0.4.0"
rodio = "0.16.0"
rusqlite = "0.28.0"
rust-embed = "6.4.1"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
warp = "0.3.2"
warp-embed = "0.4.0"

[profile.release]
strip = true
