[package]
name = "csengo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.63"
base64 = "0.13.0"
bytes = { version = "1.2.1", features = ["serde"] } # for json
chrono = { version = "0.4.22", features = ["serde"] }
log = "0.4.17"
mail-send = { version = "0.2.3", default-features = false, features = ["dkim"] }
pretty_env_logger = "0.4.0"
rodio = { version = "0.16.0", default-features = false, features = [
    "symphonia-all"
] }
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
rust-embed = "6.4.1"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.1", features = ["rt", "macros"] }
warp = { version = "0.3.2", default-features = false }
warp-embed = "0.4.0"

[profile.release]
strip = true
lto = true
opt-level = 3

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile = "./.github/cross.Dockerfile"

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
dockerfile = "./.github/cross.Dockerfile"
