[package]
name = "csengo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
async-stream = "0.3.5"
axum = { version = "0.6.20", features = ["multipart"] }
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
futures-util = { version = "0.3.28", default-features = false, features = ["std"] }
log = "0.4.20"
mail-send = { version = "0.4.0", default-features = false, features = ["dkim", "builder"] }
mime_guess = "2.0.4"
pretty_env_logger = "0.5.0"
# https://github.com/RustAudio/rodio/pull/493 ChannelVolume bug
# https://github.com/RustAudio/rodio/pull/481 add mp3 durations
# symphonia-vorbis seems broken, replaced with lewton
rodio = { version = "0.17.1", default-features = false, features = ["symphonia-flac", "symphonia-isomp4", "symphonia-mp3", "symphonia-wav", "symphonia-aac", "vorbis"], git = "https://github.com/beni69/rodio.git", branch = "master" }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
rust-embed = "8.0.0"
serde = { version = "1.0.185", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt", "macros"] }

[build-dependencies]
const-gen = { version = "1.4.1", default-features = false, features = ["std"] }

[profile.release]
strip = true
lto = true
opt-level = 3

# https://djc.github.io/askama/performance.html
[profile.dev.package.askama_derive]
opt-level = 3

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile = "./.github/cross.Dockerfile"

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
dockerfile = "./.github/cross.Dockerfile"
